--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
 				<option value="java">java</option>
 				<option value="python">python</option>
 			</select>
+			<p>Please select your favorite song listining platform ?</p>
+			<select name="language" id="">
+				<option value="gaana">gaana</option>
+				<option value="sportify">sportify</option>
+				<option value="youtube music">youtube music</option>
+			</select>
 			<br />
 			<br />
 			<input type="submit" value="submit please" />
