--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<title>DEVANGKUSHWAH</title>
 	</head>
 	<body>
-		<h1 id="top">Top of the page</h1>
+		<h1 id="top" ; style="color: red; font-size: 40px;">Top of the page</h1>
 
 		<!-- About me -->
 		<ul>
 			<li>home</li>
-			<li><a href="about.html">About</a></li>
+			<li><a style="color: blue;" ; href="about.html">About</a></li>
 			<li>contact</li>
 		</ul>
 
@@ -28,7 +28,17 @@
 		<br />
 
 		<!-- devang github account link-->
-		<h3>Click Devang github below</h3>
+		<h3
+			style="
+				color: tomato;
+				font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+					sans-serif;
+				font-weight: 3000;
+				font-size: x-large;
+			"
+		>
+			Click Devang github below
+		</h3>
 		<a href="https://github.com/DEVANGKUSHWAH">
 			<img
 				src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSPX9sUjiBy0C9bpNXIE_Hf6kp1sqw_ne3tZw&usqp=CAU"
@@ -108,7 +118,7 @@
 		<br />
 		<!-- make a form -->
 
-		<h1>Make Form</h1>
+		<h1 style="background-color: rgba(255, 251, 0, 0.89);">Make Form</h1>
 		<form action="" method="">
 			<label for="name">first name</label>
 			<input type="text" name="name" id="name" />
